--- a/CTWUXClassExercise/CTWUXClassExercise.csproj
+++ b/CTWUXClassExercise/CTWUXClassExercise.csproj
@@ -71,6 +71,7 @@
     <Content Include="Images\Code Review.jpg" />
     <Content Include="Images\CodeTheWay Logo.png" />
     <Content Include="Images\Definition of done.jpg" />
+    <Content Include="Images\Hallway %281%29.jpg" />
     <Content Include="Images\Hallway.jpg" />
     <Content Include="Images\Heroes Logo.png" />
     <Content Include="Images\Heroes2.png" />
@@ -85,6 +86,7 @@
     <Content Include="Images\Sprint Review.jpg" />
     <Content Include="Images\Stand Up.jpg" />
     <Content Include="Images\Team Learning.jpg" />
+    <Content Include="Images\Team Programming %281%29.jpg" />
     <Content Include="Images\Team Programming.jpg" />
     <Content Include="Images\To do list.jpg" />
     <Content Include="Images\Update.jpg" />
