--- a/CTWUXClassExercise/CTWUXClassExercise.csproj
+++ b/CTWUXClassExercise/CTWUXClassExercise.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Properties\css.css" />
     <Content Include="Images\Code Review.jpg" />
     <Content Include="Images\CodeTheWay Logo.png" />
     <Content Include="Images\Definition of done.jpg" />
